fix pics spacing and seeds

--- a/paper-kit-react-master/src/assets/scss/paper-kit/_examples.scss
+++ b/paper-kit-react-master/src/assets/scss/paper-kit/_examples.scss
@@ -128,6 +128,13 @@
     margin: -85px auto 0;
     display: inline-block;
 }
+.owner .avatar2{
+    padding: 5px;
+    max-width: 280px;
+    margin: -85px auto 0;
+    display: inline-block;
+}
+
 .owner .name h4{
     margin-top: 10px;
 }
